HelloWorld/force-app/main/default/objects/No_of_flight_schedule__c/No_of_flight_schedule__c.object-meta.xml
<CustomObject>
    <label>No of flight schedule</label>
    <nameField>
        <displayFormat>NFID-{000000}</displayFormat>
        <label>No of flight schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>No of flight schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>