HelloWorld/force-app/main/default/objects/No_of_flight_schedule__c/fields/First_Pilot_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Pilot_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>First Pilot Name</label>
    <referenceTo>Pilot__c</referenceTo>
    <relationshipLabel>No of flight schedules</relationshipLabel>
    <relationshipName>No_of_flight_schedules</relationshipName>
    <type>Lookup</type>
</CustomField>