HelloWorld/force-app/main/default/objects/No_of_flight_schedule__c/fields/Flight_schedule__c.field-meta.xml
<CustomField>
    <fullName>Flight_schedule__c</fullName>
    <label>Flight schedule</label>
    <referenceTo>Flight_schedule__c</referenceTo>
    <relationshipLabel>No of flight schedules</relationshipLabel>
    <relationshipName>No_of_flight_schedules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>