HelloWorld/force-app/main/default/objects/No_of_flight_schedule__c/fields/Secound_Pilot_Name__c.field-meta.xml
<CustomField>
    <fullName>Secound_Pilot_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secound Pilot Name</label>
    <referenceTo>Pilot__c</referenceTo>
    <relationshipLabel>No of flight schedules (Secound Pilot Name)</relationshipLabel>
    <relationshipName>No_of_flight_schedules1</relationshipName>
    <type>Lookup</type>
</CustomField>